--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,83 @@
+[alias]
+	whoami = config user.email
+	l = log --pretty=oneline -n 20 --graph --abbrev-commit
+	s = status
+	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
+	p = pull --recurse--submodules
+	c = clone --recursive
+	ca = !git add -A && git commit -av
+	tags = tag -l
+	branches = branch --all
+	remotes = remote --verbose
+
+	aliases = config --get-regexp alias
+
+	amend = commit --amend --reuse-message=HEAD
+
+[apply]
+	whitespace = fix
+
 [user]
 	name = Dexter Matos
 	email = dexterbrylle@users.noreply.github.com
 [core]
-	excludesfile = /Users/dexterbrylle/.gitignore_global
+	excludesfile = ~/.gitignore_global
 	editor = vim
-	edditor = --wait
+
+[color]
+	ui = auto
+
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
+
+[color "diff"]
+	meta = yellow bold
+	frag = magenta bold
+	old = red
+	new = green
+
+[color "status"]
+	added = yellow
+	changed = green
+	untracked = cyan
+
+[diff]
+	renames = copies
+
+[diff "bin"]
+	textconv = hexdump -v -C
+
+[help]
+	autocorrect = 1
+
 [http]
-	sslVerify = false
+sslVerify = false
+
+[merge]
+	log = true
+
+[push]
+	default = simple
+	followTags = true
+
+[url "git@github.com:"]
+
+	insteadOf = "gh:"
+	pushInsteadOf = "github:"
+	pushInsteadOf = "git://github.com/"
+
+[url "git://github.com/"]
+
+	insteadOf = "github:"
+
+[url "git@gist.github.com:"]
+
+	insteadOf = "gst:"
+	pushInsteadOf = "gist:"
+	pushInsteadOf = "git://gist.github.com/"
+
+[url "git://gist.github.com/"]
+
+	insteadOf = "gist:"
