--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
+	attributesfile = ~/.gitattributes
 
 [color]
 	ui = auto
@@ -61,3 +62,23 @@ sslVerify = false
 [push]
 	default = simple
 	followTags = true
+
+[url "git@github.com:"]
+
+	insteadOf = "gh:"
+	pushInsteadOf = "github:"
+	pushInsteadOf = "git://github.com/"
+
+[url "git://github.com/"]
+
+	insteadOf = "github:"
+
+[url "git@gist.github.com:"]
+
+	insteadOf = "gst:"
+	pushInsteadOf = "gist:"
+	pushInsteadOf = "git://gist.github.com/"
+
+[url "git://gist.github.com/"]
+
+	insteadOf = "gist:"
