--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
 	whitespace = fix
 
 [user]
-	name = Dexter Matos
+	name = Dexter Brylle Matos
 	email = dexterbrylle@users.noreply.github.com
 [core]
 	excludesfile = ~/.gitignore_global
