--- a/.gitconfig
+++ b/.gitconfig
@@ -1,29 +1,16 @@
-[alias]
-	whoami = config user.email
-	l = log --pretty=oneline -n 20 --graph --abbrev-commit
-	s = status
-	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
-	p = pull --recurse--submodules
-	c = clone --recursive
-	ca = !git add -A && git commit -av
-	tags = tag -l
-	branches = branch --all
-	remotes = remote --verbose
-
-	aliases = config --get-regexp alias
-
-	amend = commit --amend --reuse-message=HEAD
+[init]
+	defaultBranch = main
 
 [apply]
 	whitespace = fix
 
 [user]
-	name = Dexter Brylle Matos
+	name = Dexter Brylle
 	email = dexterbrylle@users.noreply.github.com
+
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
-	attributesfile = ~/.gitattributes
 
 [color]
 	ui = auto
